--- a/public/kanbas/dashboard/index.html
+++ b/public/kanbas/dashboard/index.html
@@ -21,6 +21,11 @@
         <td>
             <div class="kanbas-nav">
                 <ul>
+                    <li>
+                        <a href="#">
+                            <img src="../../images/neu-logo.png" width="56px" height="56px" />
+                        </a>
+                    </li>
                     <li><a href="../profile/index.html"><i class="fas fa-user"></i> Account</a></li>
                     <li><a href="#" class="active"><i class="fas fa-tachometer-alt" style="color: red"></i> Dashboard</a></li>
                     <li><a href="../course-navigation.html"><i class="fas fa-book" style="color: red"></i> Courses</a></li>
@@ -423,7 +428,49 @@
 
                     </div>
                 </div>
+
             </div>
+
+<!--            <div style="margin-left: 100px">-->
+<!--                <h2>Dashboard</h2>-->
+<!--                <hr/>-->
+<!--                <div style="margin-left: 30px;">-->
+<!--                    <h4>Published Courses (9)</h4>-->
+<!--                    <hr>-->
+<!--                    <div class="container-fluid">-->
+<!--                        <div class="row">-->
+<!--                            &lt;!&ndash; Card 1 &ndash;&gt;-->
+<!--                            &lt;!&ndash;                        <div class="card m-3 position-relative" style="width: 260px;">&ndash;&gt;-->
+<!--                            &lt;!&ndash;                            <img src="../../blue.jpg" class="card-img-top" alt="Course Image">&ndash;&gt;-->
+<!--                            &lt;!&ndash;                            <button class="btn position-absolute top-0 end-0 mt-2 me-2" style="background: transparent; border: none;">&ndash;&gt;-->
+<!--                            &lt;!&ndash;                                <i class="fas fa-ellipsis-v"></i>&ndash;&gt;-->
+<!--                            &lt;!&ndash;                            </button>&ndash;&gt;-->
+<!--                            &lt;!&ndash;                            <div class="card-body" style="padding-bottom: 50px;">&ndash;&gt;-->
+<!--                            &lt;!&ndash;                                <a href="../home.html" style="text-decoration: none; display: block;">&ndash;&gt;-->
+<!--                            &lt;!&ndash;                                    <h5 class="card-title">Course Title</h5>&ndash;&gt;-->
+<!--                            &lt;!&ndash;                                    <p class="card-text" style="font-size: 14px;">Term, Year, Section</p>&ndash;&gt;-->
+<!--                            &lt;!&ndash;                                </a>&ndash;&gt;-->
+<!--                            &lt;!&ndash;                            </div>&ndash;&gt;-->
+
+<!--                            &lt;!&ndash;                            <nav class="position-absolute bottom-0 start-0 mb-2 ms-2" style="display: flex; gap: 10px;">&ndash;&gt;-->
+<!--                            &lt;!&ndash;                                <button class="btn" style="background: transparent; border: none;"><i class="fas fa-bullhorn"></i></button>&ndash;&gt;-->
+<!--                            &lt;!&ndash;                                <button class="btn" style="background: transparent; border: none;"><i class="fas fa-tasks"></i></button>&ndash;&gt;-->
+<!--                            &lt;!&ndash;                                <button class="btn" style="background: transparent; border: none;"><i class="fas fa-comments"></i></button>&ndash;&gt;-->
+<!--                            &lt;!&ndash;                            </nav>&ndash;&gt;-->
+<!--                            &lt;!&ndash;                        </div>&ndash;&gt;-->
+<!--                            &lt;!&ndash; Card 2 &ndash;&gt;-->
+<!--                            <div class="col-lg-3 col-md-4 col-sm-6 mb-3">-->
+<!--                                <div class="card m-3 position-relative" style="width: 260px;">-->
+<!--                                    &lt;!&ndash; Card content here &ndash;&gt;-->
+<!--                                </div>-->
+<!--                            </div>-->
+<!--                            &lt;!&ndash; ... Repeat for other cards ... &ndash;&gt;-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+
+
 
         </td>
 
