--- a/public/kanbas/assignments/index.html
+++ b/public/kanbas/assignments/index.html
@@ -36,6 +36,11 @@
         <td>
             <div class="kanbas-nav">
                 <ul>
+                    <li>
+                        <a href="#">
+                            <img src="../../images/neu-logo.png" width="56px" height="56px" />
+                        </a>
+                    </li>
                     <li><a href="../profile/index.html"><i class="fas fa-user"></i> Account</a></li>
                     <li><a href="#"><i class="fas fa-tachometer-alt" style="color: red"></i> Dashboard</a></li>
                     <li><a href="#" class="active"><i class="fas fa-book" style="color: red" ></i> Courses</a></li>
