--- a/public/kanbas/home.html
+++ b/public/kanbas/home.html
@@ -29,6 +29,11 @@
         <td style="height: 100%;">
             <div class="kanbas-nav" >
                 <ul>
+                    <li>
+                        <a href="#">
+                            <img src="../images/neu-logo.png" width="56px" height="56px" />
+                        </a>
+                    </li>
                     <li><a href="./profile/index.html"><i class="fas fa-user"></i> Account</a></li>
                     <li><a href="./dashboard/index.html"><i class="fas fa-tachometer-alt" style="color: red"></i> Dashboard</a></li>
                     <li><a href="course-navigation.html" class="active"><i class="fas fa-book" style="color: red"></i>
