--- a/public/kanbas/profile/edit.html
+++ b/public/kanbas/profile/edit.html
@@ -21,6 +21,11 @@
         <td>
             <div class="kanbas-nav">
                 <ul>
+                    <li>
+                        <a href="#">
+                            <img src="../../images/neu-logo.png" width="56px" height="56px" />
+                        </a>
+                    </li>
                     <li><a href="#" class="active" ><i class="fas fa-user"></i> Account</a></li>
                     <li><a href="../dashboard/index.html"><i class="fas fa-tachometer-alt" style="color: red"></i> Dashboard</a></li>
                     <li><a href="../course-navigation.html"><i class="fas fa-book" style="color: red"></i> Courses</a></li>
