--- a/public/kanbas/profile/edit.html
+++ b/public/kanbas/profile/edit.html
@@ -26,15 +26,15 @@
                             <img src="../../images/neu-logo.png" width="56px" height="56px" />
                         </a>
                     </li>
-                    <li><a href="#" class="active" ><i class="fas fa-user"></i> Account</a></li>
-                    <li><a href="../dashboard/index.html"><i class="fas fa-tachometer-alt" style="color: red"></i> Dashboard</a></li>
-                    <li><a href="../course-navigation.html"><i class="fas fa-book" style="color: red"></i> Courses</a></li>
-                    <li><a href="#"><i class="fas fa-calendar-alt" style="color: red"></i> Calendar</a></li>
-                    <li><a href="#"><i class="fas fa-inbox" style="color: red"></i> Inbox</a></li>
-                    <li><a href="#"><i class="fas fa-history" style="color: red"></i> History</a></li>
-                    <li><a href="#"><i class="fas fa-palette" style="color: red"></i> Studio</a></li>
-                    <li><a href="#"><i class="fas fa-images" style="color: red"></i> Commons</a></li>
-                    <li><a href="#"><i class="fas fa-question-circle" style="color: red"></i> Help</a></li>
+                    <li><a href="#" class="active" ><i class="fa fa-2x fa-user-circle"></i> Account</a></li>
+                    <li><a href="../dashboard/index.html"><i class="fa fa-2x fa-tachometer-alt" style="color: red"></i> Dashboard</a></li>
+                    <li><a href="../course-navigation.html"><i class="fa fa-2x fa-book" style="color: red"></i> Courses</a></li>
+                    <li><a href="#"><i class="fa fa-2x fa-calendar-alt" style="color: red"></i> Calendar</a></li>
+                    <li><a href="#"><i class="fa fa-2x fa-inbox" style="color: red"></i> Inbox</a></li>
+                    <li><a href="#"><i class="fa fa-2x fa-history" style="color: red"></i> History</a></li>
+                    <li><a href="#"><i class="fa fa-2x fa-palette" style="color: red"></i> Studio</a></li>
+                    <li><a href="#"><i class="fa fa-2x fa-images" style="color: red"></i> Commons</a></li>
+                    <li><a href="#"><i class="fa fa-2x fa-question-circle" style="color: red"></i> Help</a></li>
                 </ul>
             </div>
 
