--- a/public/kanbas/grades.html
+++ b/public/kanbas/grades.html
@@ -46,16 +46,16 @@
                             <img src="../images/neu-logo.png" width="56px" height="56px" />
                         </a>
                     </li>
-                    <li><a href="./profile/index.html"><i class="fas fa-user"></i> Account</a></li>
-                    <li><a href="./dashboard/index.html"><i class="fas fa-tachometer-alt" style="color: red"></i> Dashboard</a></li>
-                    <li><a href="course-navigation.html" class="active"><i class="fas fa-book" style="color: red"></i>
+                    <li><a href="./profile/index.html"><i class="fa fa-2x fa-user-circle"></i> Account</a></li>
+                    <li><a href="./dashboard/index.html"><i class="fa fa-2x fa-tachometer-alt" style="color: red"></i> Dashboard</a></li>
+                    <li><a href="course-navigation.html" class="active"><i class="fa fa-2x fa-book" style="color: red"></i>
                         Courses</a></li>
-                    <li><a href="#"><i class="fas fa-calendar-alt" style="color: red"></i> Calendar</a></li>
-                    <li><a href="#"><i class="fas fa-inbox" style="color: red"></i> Inbox</a></li>
-                    <li><a href="#"><i class="fas fa-history" style="color: red"></i> History</a></li>
-                    <li><a href="#"><i class="fas fa-palette" style="color: red"></i> Studio</a></li>
-                    <li><a href="#"><i class="fas fa-images" style="color: red"></i> Commons</a></li>
-                    <li><a href="#"><i class="fas fa-question-circle" style="color: red"></i> Help</a></li>
+                    <li><a href="#"><i class="fa fa-2x fa-calendar-alt" style="color: red"></i> Calendar</a></li>
+                    <li><a href="#"><i class="fa fa-2x fa-inbox" style="color: red"></i> Inbox</a></li>
+                    <li><a href="#"><i class="fa fa-2x fa-history" style="color: red"></i> History</a></li>
+                    <li><a href="#"><i class="fa fa-2x fa-palette" style="color: red"></i> Studio</a></li>
+                    <li><a href="#"><i class="fa fa-2x fa-images" style="color: red"></i> Commons</a></li>
+                    <li><a href="#"><i class="fa fa-2x fa-question-circle" style="color: red"></i> Help</a></li>
                 </ul>
             </div>
         </td>
@@ -99,8 +99,8 @@
                     <div class="w-100">
                         <!-- Buttons with Font Awesome icons -->
                         <div class="mb-3 text-end">
-                            <button class="btn btn-primary me-2"><i class="fas fa-file-import"></i> Import</button>
-                            <button class="btn btn-primary me-2"><i class="fas fa-file-export"></i> Export</button>
+                            <button class="btn btn-secondary me-2"><i class="fas fa-file-import"></i> Import</button>
+                            <button class="btn btn-secondary me-2"><i class="fas fa-file-export"></i> Export</button>
                             <button class="btn btn-secondary"><i class="fas fa-cog"></i></button>
                         </div>
 
@@ -117,7 +117,7 @@
                         </div>
 
                         <!-- Apply Filters button with Font Awesome icon -->
-                        <button class="btn btn-primary mb-3"><i class="fas fa-filter"></i> Apply Filters</button>
+                        <button class="btn btn-secondary mb-3"><i class="fas fa-filter"></i> Apply Filters</button>
 
                     </div>
                 </div>
